Fix: Button Children and Navbar Overflow

--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -1,16 +1,18 @@
-$base-color: green;
+$base-color: #09753c;
 $grey: grey;
 nav {
-  width: 100vw;
+  margin: 0.5%;
   display: flex;
   align-items: center;
+  border-radius: 0.5rem;
+  overflow: hidden;
 }
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
   margin-inline: 1%;
+  // font-size: 1vw;
 }
 
 .header1 {
@@ -22,9 +24,7 @@ nav {
 }
 .header2 {
   margin-right: 2%;
-  margin-left: auto;
   display: flex;
-  padding: 1rem;
   justify-content: space-between;
   align-items: center;
 }
@@ -35,7 +35,6 @@ nav {
   color: $base-color;
 }
 .user {
-  float: right;
   font-weight: 300;
   color: $grey;
 }
@@ -48,9 +47,9 @@ nav {
   padding: 1rem;
   color: white;
   transition: 0.6s ease-in-out;
-  background-color: green;
+  background-color: $base-color;
   a:hover & {
-    color: green;
+    color: $base-color;
     background-color: white;
   }
 }
